--- a/docker/spark/conf/spark-defaults.conf
+++ b/docker/spark/conf/spark-defaults.conf
@@ -1,10 +1,14 @@
 spark.master                     spark://spark-master:7077
+
+# Logs de eventos no HDFS
 spark.eventLog.enabled           true
 spark.eventLog.dir               hdfs://namenode:9000/spark-events
 spark.history.fs.logDirectory    hdfs://namenode:9000/spark-events
+
+# Recursos
 spark.driver.memory              1g
 spark.executor.memory            1g
 spark.executor.cores             1
+
+# HDFS configs
 spark.hadoop.fs.defaultFS        hdfs://namenode:9000
-spark.hadoop.yarn.resourcemanager.hostname resourcemanager
-spark.hadoop.yarn.nodemanager.hostname nodemanager
