--- a/docker/conf/hadoop.env
+++ b/docker/conf/hadoop.env
@@ -1,1 +1,12 @@
+# Memória da JVM
 HADOOP_HEAPSIZE=512
+
+# Configuração básica do HDFS
+CORE_CONF_fs_defaultFS=hdfs://namenode:9000
+HDFS_CONF_dfs_replication=1
+
+# Configuração do YARN
+YARN_CONF_yarn_resourcemanager_hostname=resourcemanager
+YARN_CONF_yarn_log___aggregation___enable=true
+YARN_CONF_yarn_scheduler_capacity_root_default_maximum___allocation___mb=4096
+YARN_CONF_yarn_scheduler_capacity_root_default_maximum___allocation___vcores=2
